--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@eslint/js": "^9.32.0",
     "@types/bcrypt": "^6.0.0",
     "@types/compression": "^1.8.1",
+    "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
