refactor: remoção do serviço legado GuruAprovacao e implementação de novas rotas e middlewares para o módulo guru
- Substituição do serviço GuruAprovacao por uma nova estrutura modular
- Adição de validações e middlewares para controle de acesso e logging
- Implementação de novas rotas para estatísticas aprimoradas e atividades do usuário
- Melhoria na configuração do rate limit e sanitização de logs
- Atualização da documentação OpenAPI para refletir as mudanças no módulo guru

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -122,7 +122,6 @@
     "**/*.spec.ts",
     "src/middleware/admin-auth.js",
     "src/middleware/optimized-auth.middleware.ts",
-    // Exclui documentação OpenAPI gerada grande para não bloquear o typecheck do servidor
-    "src/core/documentation/openapi.ts"
+    // Mantemos todos os arquivos; openapi.ts será compilado para permitir export estático
   ]
 }
