--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
     "schema-validate": "tsx scripts/schema-validator.ts",
     "status": "node -e \"console.log('🎯 AprovaFácil Backend Status')\" && node -e \"console.log('• Health: http://localhost:5000/api/health')\" && node -e \"console.log('• Admin: http://localhost:5000/api/admin/estatisticas')\"",
     "docs": "echo '📚 Documentação da API disponível em /api/docs quando o servidor estiver rodando'",
+    "openapi:export": "node scripts/export-openapi.cjs",
+    "openapi:validate": "swagger-cli validate openapi.json",
+    "openapi:spectral": "spectral lint --ruleset .spectral.yaml --fail-severity error openapi.json",
+    "contracts:test": "npm run openapi:export && npm run openapi:validate && (npm run openapi:spectral || node -e \"console.log('Spectral warnings ignored')\")",
+    "plop": "plop --plopfile plopfile.cjs",
     "create-admin": "node scripts/create-admin.js",
     "migrate": "tsx scripts/migrate.js",
     "migrate:up": "tsx scripts/migrate.js up",
@@ -97,6 +102,10 @@
     "jsdom": "^26.1.0",
     "knip": "^5.61.3",
     "openapi-types": "^12.1.3",
+    "@stoplight/spectral-cli": "^6.13.1",
+    "swagger-cli": "^4.0.4",
+    "plop": "^4.0.1",
+    "ts-node": "^10.9.2",
     "rimraf": "^6.0.1",
     "tsx": "^4.6.0",
     "typescript": "^5.8.3",
