feat: implementação do módulo simulados com estrutura modular e suporte a slug
- Criação do módulo simulados com DTOs, serviços, repositórios e controladores
- Implementação de rotas para gerenciamento de simulados, incluindo suporte a slug
- Adição de validações e mapeamentos para garantir consistência com o banco de dados
- Atualização da documentação OpenAPI para refletir as novas rotas e estruturas
- Melhoria na configuração de cache e ETags para otimização de desempenho
- Implementação de testes para middleware e helpers do módulo simulados

--- a/.gitignore
+++ b/.gitignore
@@ -4,10 +4,14 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+.eslintcache
+.cache/
+node_modules/.cache/
 
 # Build
 build/
 dist/
+**/.vite/
 
 # Environment
 .env
@@ -30,7 +34,20 @@ Desktop.ini
 
 # Test/coverage
 coverage/
+.nyc_output/
 *.lcov
+junit.xml
+jest-junit.xml
+playwright-report/
+test-results/
+*.tsbuildinfo
 
 # Outros
 .kiro/ 
+tsconfig.tsbuildinfo
+openapi.json
+openapi.yaml
+*.d.ts.map
+*.map
+src/**/*.d.ts
+src/**/*.map
