--- a/env.example
+++ b/env.example
@@ -19,3 +19,11 @@ CORS_ORIGIN=http://localhost:3000
 
 # Ambiente
 NODE_ENV=development
+
+# Feature flags (rollout)
+# Simulados: 'off' | 'on' | 'canary'
+SIMULADOS_NEW_MODULE_FLAG=canary
+SIMULADOS_NEW_MODULE_CANARY_PERCENT=10
+# Guru (já existente)
+GURU_NEW_MODULE_FLAG=on
+GURU_NEW_MODULE_CANARY_PERCENT=0
