--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "dist/src/index.js",
   "scripts": {
     "build": "tsc",
+    "postbuild": "npm run openapi:export",
     "start": "node dist/src/index.js",
     "dev": "tsx watch src/index.ts",
     "dev:watch": "tsx watch src/index.ts",
@@ -21,8 +22,9 @@
     "test:run": "vitest run",
     "test:integration": "vitest run --config vitest.integration.config.ts",
     "test:integration:watch": "vitest --config vitest.integration.config.ts",
-    "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
+    "ci:quality": "npm run typecheck && npm run lint && npm run test:run && npm run contracts:test",
     "typecheck": "tsc --noEmit",
     "preflight": "tsx scripts/preflight.ts",
     "preflight:check": "tsx scripts/preflight.ts --check-only",
@@ -35,6 +37,7 @@
     "openapi:validate": "swagger-cli validate openapi.json",
     "openapi:spectral": "spectral lint --ruleset .spectral.yaml --fail-severity error openapi.json",
     "contracts:test": "npm run openapi:export && npm run openapi:validate && (npm run openapi:spectral || node -e \"console.log('Spectral warnings ignored')\")",
+    "perf:p95": "node scripts/http-benchmark.cjs http://localhost:5000/api/v1/simulados 60",
     "plop": "plop --plopfile plopfile.cjs",
     "create-admin": "node scripts/create-admin.js",
     "migrate": "tsx scripts/migrate.js",
@@ -68,6 +71,7 @@
     "@supabase/supabase-js": "^2.50.3",
     "bcrypt": "^6.0.0",
     "compression": "^1.8.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
@@ -80,6 +84,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
+    "@stoplight/spectral-cli": "^6.13.1",
     "@types/bcrypt": "^6.0.0",
     "@types/compression": "^1.8.1",
     "@types/cookie-parser": "^1.4.9",
@@ -102,11 +107,10 @@
     "jsdom": "^26.1.0",
     "knip": "^5.61.3",
     "openapi-types": "^12.1.3",
-    "@stoplight/spectral-cli": "^6.13.1",
-    "swagger-cli": "^4.0.4",
     "plop": "^4.0.1",
-    "ts-node": "^10.9.2",
     "rimraf": "^6.0.1",
+    "swagger-cli": "^4.0.4",
+    "ts-node": "^10.9.2",
     "tsx": "^4.6.0",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.39.0",
