refactor: atualização das rotas e configuração de autenticação
- Alteração das rotas para o módulo de simulados, incluindo suporte a concurso_id nas consultas
- Atualização da configuração de expiração de tokens JWT para valores mais seguros
- Implementação de validações e melhorias na estrutura das rotas de questões semanais
- Adição de novos parâmetros e melhorias na documentação OpenAPI
- Remoção de rotas deprectadas e ajustes na lógica de filtragem por concurso

--- a/env.example
+++ b/env.example
@@ -27,3 +27,18 @@ SIMULADOS_NEW_MODULE_CANARY_PERCENT=10
 # Guru (já existente)
 GURU_NEW_MODULE_FLAG=on
 GURU_NEW_MODULE_CANARY_PERCENT=0
+
+# Questões Semanais - Política de desbloqueio
+QS_UNLOCK_POLICY=strict
+QS_WEEK_DURATION_DAYS=7
+QS_MAX_CONCURRENT_ADVANCES=10
+QS_ADVANCE_CHECK_INTERVAL_MS=60000
+
+# Cache e Performance
+CACHE_PROVIDER=memory
+CACHE_DEFAULT_TTL=300
+CACHE_MAX_KEYS=1000
+REDIS_URL=redis://localhost:6379
+REDIS_PASSWORD=
+REDIS_USERNAME=
+REDIS_KEY_PREFIX=aprovafacil:
